# react-vello

./: .gitignore  .vercelignore  AGENTS.md  LICENSE.md  PRD.md  README.md  biome.json  biome.jsonc  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json  vercel.json
.changeset/: README.md  config.json  strong-roses-hunt.md  wise-frogs-fold.md
.github/workflows/: npm-publish.yml
crates/rvello/: Cargo.toml
crates/rvello/pkg/: .gitignore  package.json
crates/rvello/src/: lib.rs  present.wgsl
scripts/: ensure-wasm.cjs
