[package]
name = "rvello"
version = "0.0.1"
edition = "2021"
authors = ["React Vello <dev@example.com>"]
license = "MIT"
description = "WASM bindings for the React + Vello renderer"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["web"]
web = []

[dependencies]
console_error_panic_hook = "0.1"
js-sys = "0.3"
skrifa = "0.37"
wasm-bindgen = { version = "0.2.92", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
vello = { version = "0.6", default-features = false, features = ["wgpu"] }
wgpu = { version = "26.0.1", default-features = false, features = ["wgsl", "webgpu"] }
web-sys = { version = "0.3", features = ["HtmlCanvasElement", "OffscreenCanvas", "Window", "Document"] }
